--- a/RCE/download.html
+++ b/RCE/download.html
@@ -1,1 +1,1 @@
-<a href="itms-services://?action=download-manifest&url=https://otadownload.jac.com.cn//download/J-chat/manifest.plist">J-Chat 安装</a>
+<meta http-equiv="refresh" content="1;URL=itms-services://?action=download-manifest&url=https://otadownload.jac.com.cn//download/J-chat/manifest.plist">
